# isaac-lab-inertia-identification

./: .env  .gitignore  README.md  pyproject.toml  setup.sh
.devcontainer/: devcontainer.json
data/: optimized_trajectory.json  optimized_trajectory_box.json
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  requirements.txt
docs/: 2026-02-09-project-architecture.md
scripts/: run_isaac_identification.py  run_optimization.py  spawn_ur5e.py
src/collision_check/: __init__.py  capsule_checker.py  collision_checker.py
src/iparam_identification/: setup.py
src/iparam_identification/data/: optimized_trajectory.json
src/iparam_identification/docs/: 2026-02-08-isaac-sim-integration-plan.md  2026-02-09-standalone-execution-guide.md  excitation_trajectory_optimization_plan.md
src/iparam_identification/estimation/: base_estimator.py  batch_ls.py  batch_tls.py  rls.py  rtls.py
src/iparam_identification/excitation_trajectory/: __init__.py  constraints.py  excitation_optimizer.py
src/iparam_identification/launch/: visualize_trajectory.launch.py
src/iparam_identification/scripts/: run_identification_test.py  run_isaac_identification.py  run_optimization.py  visualize_trajectory.py  visualize_trajectory.sh
src/isaac_utils/: __init__.py  bootstrap.py  scene.py
src/kinematics/: kinematics.py  package.xml  setup.py
src/kinematics/test/: conftest.py
src/models/: __init__.py
src/sensor/: __init__.py
src/trajectories/: __init__.py
tests/: conftest.py  test_cylinder_payload.py  test_sensor.py  test_trajectory_optimization.py  test_two_stage_cylinder.py
(+16 files in other folders)
